--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   "author": "akterstack",
   "license": "SEE LICENSE IN License.txt",
   "dependencies": {
-    "apollo-datasource-rest": "^0.2.0",
     "apollo-server": "^2.2.2",
     "graphql": "^14.0.2",
-    "newsapi": "^2.4.0",
-    "typescript": "^3.1.3"
+    "newsapi": "^2.4.0"
   },
   "main": "src/index.js",
   "private": false,
@@ -24,7 +22,6 @@
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/register": "^7.0.0",
-    "nodemon": "^1.18.4",
-    "ts-node": "^7.0.1"
+    "nodemon": "^1.18.4"
   }
 }
